--- a/apps/agents/package.json
+++ b/apps/agents/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agentchat/agents",
+  "name": "@axon/agents",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,8 +10,8 @@
     "format": "echo 'no format configured'"
   },
   "dependencies": {
-    "@agentchat/agent-factory": "workspace:*",
-    "@agentchat/db": "workspace:*",
+    "@axon/agent-factory": "workspace:*",
+    "@axon/database": "workspace:*",
     "@neondatabase/serverless": "0.10.4",
     "drizzle-orm": "0.36.1"
   },
