--- a/apps/group-controller/package.json
+++ b/apps/group-controller/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "@agentchat/db",
+  "name": "@axon/group-controller",
   "private": true,
   "type": "module",
-  "exports": {
-    ".": "./src/index.ts"
-  },
   "scripts": {
+    "dev": "wrangler dev src/index.ts",
+    "deploy": "wrangler deploy",
     "lint": "echo 'no lint configured'",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "format": "echo 'no format configured'"
   },
-  "dependencies": {
-    "drizzle-orm": "0.36.1"
-  },
   "devDependencies": {
-    "drizzle-kit": "0.24.2",
+    "@cloudflare/workers-types": "4.20240919.0",
+    "wrangler": "3.75.0",
     "typescript": "5.6.3"
   }
 }
