--- a/apps/orchestrator/package.json
+++ b/apps/orchestrator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agentchat/orchestrator",
+  "name": "@axon/orchestrator",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,7 +10,7 @@
     "format": "echo 'no format configured'"
   },
   "dependencies": {
-    "@agentchat/db": "workspace:*",
+    "@axon/database": "workspace:*",
     "@neondatabase/serverless": "0.10.4",
     "drizzle-orm": "0.36.1"
   },
