--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agentchat/web",
+  "name": "@axon/web",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,7 +11,7 @@
     "format": "echo 'no format configured'"
   },
   "dependencies": {
-    "@agentchat/db": "workspace:*",
+    "@axon/database": "workspace:*",
     "@tanstack/react-query": "5.59.0",
     "@trpc/client": "10.45.2",
     "@trpc/react-query": "10.45.2",
