--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "@agentchat/chat-controller",
+  "name": "@axon/database",
   "private": true,
   "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
-    "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy",
     "lint": "echo 'no lint configured'",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "format": "echo 'no format configured'"
   },
+  "dependencies": {
+    "drizzle-orm": "0.36.1"
+  },
   "devDependencies": {
-    "@cloudflare/workers-types": "4.20240919.0",
-    "wrangler": "3.75.0",
+    "drizzle-kit": "0.24.2",
     "typescript": "5.6.3"
   }
 }
