feat(secret-management): implement org-admin only access for secrets management, including creation, updates, and retrieval with encryption
feat(secret-management): add requirements for secret storage, including required fields and encrypted values

feat(secret-management): ensure secrets do not expire and implement versioning for cache invalidation

feat(secret-management): mask secret values in UI with explicit reveal option for org admins

feat(provider-catalog): restrict provider catalog management to org-admins and implement org-specific provider listings

feat(mcp-management): add MCP server management with validation and tool fetching capabilities

feat(agent-management): enhance agent creation flow with MCP selection and provider integration

feat(audit): introduce audit logging for actions performed by users

feat(database): add new tables and services for managing secrets, MCP servers, and provider catalogs

feat(crypto): implement encryption and decryption utilities for secret values

fix(agent-factory): integrate cloudflare AI gateway provider for enhanced functionality

--- a/packages/agent-factory/package.json
+++ b/packages/agent-factory/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/openai": "3.0.30",
     "@ai-sdk/react": "^3.0.99",
     "ai": "6.0.97",
+    "ai-gateway-provider": "latest",
     "zod": "4.3.6"
   },
   "devDependencies": {
