--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -12,7 +12,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:backfill-mcp-secrets": "node ./scripts/backfill-mcp-secrets.mjs"
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.30",
