feat: Enhance orchestrator runtime with authentication, routing token management, and history lifecycle
- Implemented app-signed authentication for critical endpoints to prevent unauthorized access.
- Added deterministic group controller ID derivation and idempotent group activation state management.
- Extended group activation payload to include history mode and enforced per-org active-group limits.
- Introduced short-lived routing tokens with required claims and validation mechanisms.
- Established strict runtime chain enforcement to secure control-plane access.
- Developed a trust flow between the group controller and agents, including JWT minting and verification.
- Enhanced history lifecycle management with support for internal and external modes, including auto-archiving.
- Enforced canonical config ownership and secret reference management for workspace configurations.
- Updated integration and lifecycle tests to cover new features and ensure reliability.
- Revised architecture documentation to reflect changes in runtime and data contracts.

--- a/apps/agents/package.json
+++ b/apps/agents/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/openai": "^3.0.30",
     "@axon/agent-factory": "workspace:*",
     "@axon/database": "workspace:*",
+    "@axon/shared": "workspace:*",
     "@neondatabase/serverless": "0.10.4",
     "drizzle-orm": "0.36.1",
     "zod": "^4.3.6"
