--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   ],
   "scripts": {
     "dev": "pnpm -r dev",
+    "dev:web": "pnpm --filter @axon/web dev",
+    "dev:orchestrator": "pnpm --filter @axon/orchestrator dev",
+    "dev:agents": "pnpm --filter @axon/agents dev",
+    "dev:group-controller": "pnpm --filter @axon/group-controller dev",
     "build": "pnpm -r build",
     "lint": "biome lint .",
     "format": "biome format . --write",
