--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "postcss": "^8.5.6",
     "react": "19.2.4",
     "react-dom": "19.2.4",
+    "sonner": "^2.0.7",
     "superjson": "2.2.1",
     "svix": "^1.85.0",
     "tailwind-merge": "^3.5.0",
