--- a/apps/agents/package.json
+++ b/apps/agents/package.json
@@ -14,6 +14,7 @@
     "@axon/agent-factory": "workspace:*",
     "@axon/database": "workspace:*",
     "@axon/shared": "workspace:*",
+    "@modelcontextprotocol/sdk": "^1.27.1",
     "@neondatabase/serverless": "0.10.4",
     "drizzle-orm": "0.36.1",
     "zod": "^4.3.6"
