feat: update wrangler configuration and add Neon database URL variable
- Added compatibility flag for Node.js in wrangler.toml
- Introduced NEON_DATABASE_URL variable in wrangler.toml
- Updated pnpm-lock.yaml to include @modelcontextprotocol/sdk version 1.27.1

--- a/apps/agents/wrangler.toml
+++ b/apps/agents/wrangler.toml
@@ -1,8 +1,10 @@
 name = "agentchat-agents"
 main = "src/index.ts"
 compatibility_date = "2025-02-01"
+compatibility_flags = ["nodejs_compat"]
 
 [vars]
 ENVIRONMENT = "dev"
 CLOUDFLARE_AIG_TOKEN = ""
 GC_PUBLIC_KEY = ""
+NEON_DATABASE_URL = ""
