--- a/apps/agents/package.json
+++ b/apps/agents/package.json
@@ -21,8 +21,8 @@
   },
   "devDependencies": {
     "@axon/typescript-config": "workspace:^",
-    "@cloudflare/workers-types": "4.20240919.0",
+    "@cloudflare/workers-types": "^4",
     "typescript": "5.6.3",
-    "wrangler": "3.75.0"
+    "wrangler": "^4.0.0"
   }
 }
