--- a/apps/agents/wrangler.toml
+++ b/apps/agents/wrangler.toml
@@ -6,5 +6,6 @@ compatibility_flags = ["nodejs_compat"]
 [vars]
 ENVIRONMENT = "dev"
 CLOUDFLARE_AIG_TOKEN = ""
+DATABASE_URL = ""
 GC_PUBLIC_KEY = ""
-NEON_DATABASE_URL = ""
+SECRETS_ENCRYPTION_KEY = ""
